2005-10-09  Kouhei Sutou  <kou@cozmixng.org>

	* packages/cairo/ext/rb_cairo_context.c,
	  packages/cairo/ext/rb_cairo_matrix.c: Moved duplicated
	  functions to ...
	* packages/cairo/ext/rb_cairo_private.h: ... here.
	* packages/cairo/ext/rb_cairo_private.c: ditto.

	* packages/cairo/ext/rb_cairo_scaled_font.c: Implemented
	  cairo_scaled_font_t.
	* packages/cairo/ext/cairo.def: ditto.
	* packages/cairo/ext/rb_cairo.c: ditto.
	* packages/cairo/ext/rb_cairo.h: ditto.

	* packages/cairo/lib/cairo.rb: Removed deprecated wrapper API.

	* packages/cairo/ext/rb_cairo_surface.c:
	  - Implemented File I/O API by Ruby.
	  - SurfaceXXX -> XXXSurface.

	* packages/cairo/ext/rb_cairo_exception.c: Tidied exceptions.
	* packages/cairo/ext/cairo.def: ditto.
	* packages/cairo/ext/rb_cairo.h: ditto.
	* packages/cairo/ext/rb_cairo_context.c: ditto.
	* packages/cairo/ext/rb_cairo_font_options.c: ditto.
	* packages/cairo/ext/rb_cairo_matrix.c: ditto.
	* packages/cairo/ext/rb_cairo_pattern.c: ditto.
	* packages/cairo/ext/rb_cairo_surface.c: ditto.

	* packages/cairo/ext/rb_cairo_pattern.c: Implemented
	  cairo_pattern_t.
	* packages/cairo/ext/rb_cairo.c: ditto.
	* packages/cairo/ext/rb_cairo.h: ditto.
	* packages/cairo/ext/cairo.def: ditto.
	* packages/cairo/lib/cairo.rb: ditto.
	* packages/cairo/ext/rb_cairo_context.c: Followed the avobe changes.

	* packages/cairo/ext/rb_cairo_surface.c
	  (cr_surface_write_to_png): Don't use rb_need_block() for ruby <=
	  1.8.2.

2005-10-08  Kouhei Sutou  <kou@cozmixng.org>

	* packages/cairo/ext/rb_cairo_context.c: Supported all API for
	  cairo_t.
	* samples/png.rb: Followed the avobe changes.

	* packages/cairo/ext/rb_cairo_path.c: Implemented cairo_path_t.
	* packages/cairo/ext/rb_cairo.c: ditto.
	* packages/cairo/ext/rb_cairo.h: ditto.
	* packages/cairo/ext/cairo.def: ditto.

	* packages/cairo/ext/rb_cairo_font_options.c: Fixed a typo.

	* setup.rb: Added workaround for an error on Win32 platform.