@@ -1,3 +1,8 @@
+2005-10-10  Kouhei Sutou  <kou@cozmixng.org>
+
+	* packages/cairo/ext/rb_cairo_matrix.c: Tidied cairo_matrix_t.
+	* packages/cairo/lib/cairo.rb: ditto.
+
 2005-10-09  Kouhei Sutou  <kou@cozmixng.org>
 
 	* packages/cairo/ext/rb_cairo_context.c,
